<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/wall2">
    
    <TextView 
        android:id="@+id/updatePwd"
        android:text="@string/updatePassword"
        android:textSize="25dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        />
    
    <!-- 表格布局 -->   
    <TableLayout   
        android:id="@+id/passwordInfo"
        android:layout_width="fill_parent"   
        android:layout_height="wrap_content" 
        android:layout_marginTop="30dp"
        android:padding="10dip" >   
        <!-- 表格布局：第一行 -->   
        <TableRow   
            android:layout_width="fill_parent"   
            android:layout_height="wrap_content"   
            android:background="@drawable/shape_top_corner_no_bottom_line"   
            android:padding="10dip" >   
            <TextView   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_marginRight="10dip"   
                android:text="@string/oldPassword" >   
            </TextView>   
            <EditText   
                android:id="@+id/oldPasswordEdit"   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:password="true"
                android:layout_weight="1"   
                android:background="@null"   
                android:singleLine="true" >   
            </EditText>   
        </TableRow>    
        <!-- 表格布局：第二行 -->   
        <TableRow   
            android:layout_width="fill_parent"   
            android:layout_height="wrap_content"   
            android:background="@drawable/shape_bottom_corner_no_top_line"   
            android:padding="10dip" >   
            <TextView   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_marginRight="10dip"   
                android:text="@string/newPassword" >   
            </TextView>   
            <EditText   
                android:id="@+id/newPasswordEdit"   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_weight="1"  
                android:password="true" 
                android:background="@null"   
                android:singleLine="true" >   
            </EditText>   
        </TableRow>   
         <!-- 表格布局：第三行 -->   
        <TableRow   
            android:layout_width="fill_parent"   
            android:layout_height="wrap_content"   
            android:background="@drawable/shape_bottom_corner_no_top_line"   
            android:padding="10dip" >   
            <TextView   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_marginRight="10dip"   
                android:text="@string/newPasswordConfirm" >   
            </TextView>   
            <EditText   
                android:id="@+id/newPasswordConfirm"   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_weight="1"   
                android:background="@null"   
                android:password="true"
                android:singleLine="true" >   
            </EditText>   
            </TableRow>
    </TableLayout>  
    
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/cancle"
                android:layout_marginRight="20dp"
                android:textSize="18dp" />

            <Button
                android:id="@+id/ok"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/ok_label"
                android:textSize="18dp" />
        </LinearLayout>

</LinearLayout>