<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <RelativeLayout
         android:id="@+id/notewallTitle"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:background="@drawable/wood2">
         
         
    <ImageView 
        android:id="@+id/btnGoBack"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:src="@drawable/goback"
        android:layout_alignParentLeft="true"
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/loginRegister"
        android:textSize="40dp"
         android:shadowColor="#0A0A0A"  
        android:shadowDx="5"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:layout_centerInParent="true"
        />
    
    </RelativeLayout>
    
   

	<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     android:layout_alignParentBottom="true"
    android:layout_below="@id/notewallTitle"
    android:background="@drawable/wall2" >
    
	    <!--  
    <RelativeLayout
        android:id="@+id/notewallTitle"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:shadowColor="#0A0A0A"
            android:shadowDx="5"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/loginRegister"
            android:textSize="40dp" />

    </RelativeLayout>
    -->
    
	<!-- 表格布局 -->   
    <TableLayout   
        android:id="@+id/registerInfo"
        android:layout_width="fill_parent"   
        android:layout_height="wrap_content"   
        android:padding="10dip"
        android:layout_marginTop="50dp"
        android:layout_below="@id/notewallTitle" >   
        <!-- 表格布局：第一行 -->   
        <TableRow   
            android:layout_width="fill_parent"   
            android:layout_height="wrap_content"   
            android:background="@drawable/shape_top_corner_no_bottom_line"   
            android:padding="10dip" >   
            <TextView   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_marginRight="10dip"   
                android:text="@string/userName_label" >   
            </TextView>   
            <EditText   
                android:id="@+id/registerUserName"   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical" 
                 android:textColor="#A0A0A0"   
                 android:textCursorDrawable="@null"  
                android:layout_weight="1"   
                android:background="@null"   
                android:singleLine="true" >   
            </EditText>   
        </TableRow>   
        <!-- 表格布局：第二行 -->   
        <TableRow   
            android:layout_width="fill_parent"   
            android:layout_height="wrap_content"   
            android:background="@drawable/shape_no_corner_without_bottom"   
            android:padding="10dip" >   
            <TextView   
                android:layout_width="fill_parent"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_marginRight="10dip"   
                android:text="@string/password_lable" >   
            </TextView>   
            <EditText   
                android:id="@+id/registerPassword"   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_weight="1" 
                 android:textColor="#A0A0A0"   
                 android:textCursorDrawable="@null"
                android:password="true"  
                android:background="@null"   
                android:singleLine="true" >   
            </EditText> 
              
        </TableRow>   
        <!-- 表格布局：第三行 -->   
        <TableRow   
            android:layout_width="fill_parent"   
            android:layout_height="wrap_content"   
            android:background="@drawable/shape_bottom_corner_no_top_line"   
            android:padding="10dip" >   
            <TextView   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_marginRight="10dip"   
                android:text="@string/passwordConfirm_label" >   
            </TextView>   
            <EditText   
                android:id="@+id/registerPasswordConfirm"   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_weight="1"   
                android:textColor="#A0A0A0"   
                android:textCursorDrawable="@null"
                android:background="@null"   
                android:password="true"
                android:singleLine="true" >   
            </EditText>   
        </TableRow>   
    </TableLayout>   
    <!-- 

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:orientation="vertical" 
        android:layout_below="@id/notewallTitle"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/userName_label"
                android:textColor="#FFFFFF" >
            </TextView>

            <EditText
                android:id="@+id/registerUserName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxLength="20" >
            </EditText>
        </LinearLayout>

        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/password_lable"
                android:textColor="#FFFFFF" >
            </TextView>

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:password="true" >
            </EditText>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/passwordConfirm_label"
                android:textColor="#FFFFFF" >
            </TextView>

            <EditText
                android:id="@+id/registerPasswordConfirm"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_password"
                android:password="true" >
            </EditText>
        </RelativeLayout> -->
        
        <LinearLayout
            android:id="@+id/sexGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_below="@id/registerInfo"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:layout_marginLeft="10dp"
                android:text="@string/sex_label"
                android:textSize="16dp"
                android:textColor="#FFFFFF" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radiomale"
                    android:text="@string/male"
                    android:textColor="#ffffff" />

                <RadioButton
                    android:id="@+id/radiofemale"
                    android:text="@string/female"
                    android:textColor="#ffffff" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/sexGroup"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/backLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/backLogin"
                android:layout_marginRight="20dp"
                android:textSize="18dp" />

            <Button
                android:id="@+id/registerSubmit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/loginRegister"
                android:textSize="18dp" />
        </LinearLayout>

</RelativeLayout>
</RelativeLayout>