<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <RelativeLayout
         android:id="@+id/notewallTitle"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:background="@drawable/wood2">
         
         
    <ImageView 
        android:id="@+id/btnGoBack"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:src="@drawable/goback"
        android:layout_alignParentLeft="true"
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/loginTitle"
        android:textSize="40dp"
         android:shadowColor="#0A0A0A"  
        android:shadowDx="5"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:layout_centerInParent="true"
        />
    
    <ImageView 
        android:id="@+id/btnGoAhead"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:src="@drawable/goahead"
        android:layout_alignParentRight="true"
        />
    
    </RelativeLayout>

    
	<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     android:layout_alignParentBottom="true"
    android:layout_below="@id/notewallTitle"
    android:background="@drawable/wall2" >
  
	    <!--  
    <RelativeLayout
        android:id="@+id/notewallTitle"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:shadowColor="#0A0A0A"
            android:shadowDx="5"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/loginTitle"
            android:textSize="40dp" />

    </RelativeLayout>
    -->
    <!-- 表格布局 -->   
    <TableLayout   
        android:id="@+id/userinfo"
        android:layout_width="fill_parent"   
        android:layout_height="wrap_content"
        android:layout_below="@id/notewallTitle"   
        android:layout_marginTop="50dp"
        android:padding="10dip" >   
        <!-- 表格布局：第一行 -->   
        <TableRow   
            android:layout_width="fill_parent"   
            android:layout_height="wrap_content"   
            android:background="@drawable/shape_top_corner_no_bottom_line"   
            android:padding="10dip" >   
            <TextView   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_marginRight="10dip"   
                android:text="@string/loginUserNameLabel" >   
            </TextView>   
            <EditText   
                android:id="@+id/loginUserNameEdit"   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"
                android:textColor="#A0A0A0"   
                android:textCursorDrawable="@null"
                android:layout_weight="1"   
                android:background="@null"   
                android:singleLine="true" >   
            </EditText>   
        </TableRow>    
        <!-- 表格布局：第二行 -->   
        <TableRow   
            android:layout_width="fill_parent"   
            android:layout_height="wrap_content"   
            android:background="@drawable/shape_bottom_corner_no_top_line"   
            android:padding="10dip" >   
            <TextView   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:layout_marginRight="10dip"   
                android:text="@string/loginPasswordLabel" >   
            </TextView>   
            <EditText   
                android:id="@+id/loginPasswordEdit"   
                android:layout_width="wrap_content"   
                android:layout_height="wrap_content"   
                android:layout_gravity="center_vertical"   
                android:textColor="#A0A0A0"  
                android:textCursorDrawable="@null" 
                android:layout_weight="1"  
                android:password="true" 
                android:background="@null"   
                android:singleLine="true" >   
            </EditText>   
        </TableRow>   
    </TableLayout>   

    <!-- <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginUserNameLabel"
                android:textSize="18dp"
                android:textColor="#FFFFFF" >
            </TextView>

            <EditText
                android:id="@+id/loginUserNameEdit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:text="" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginPasswordLabel"
                android:textSize="18dp"
                android:textColor="#FFFFFF" >
            </TextView>

            <EditText
                android:id="@+id/loginPasswordEdit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/loginSubmit"
                android:nextFocusRight="@+id/loginSubmit"
                android:password="true" >
            </EditText>
        </LinearLayout> -->

        <CheckBox
            android:id="@+id/loginRememberMeCheckBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginRememberMe"
            android:layout_marginLeft="15dp"
            android:layout_below="@id/userinfo" >
        </CheckBox>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal" 
            android:layout_marginTop="20dp"
            android:layout_below="@id/loginRememberMeCheckBox"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/loginSubmit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/loginSubmit"
                android:textSize="18dp" />

            <Button
                android:id="@+id/loginRegister"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/loginRegister"
                android:layout_marginLeft="20dp"
                android:textSize="18dp" />
        </LinearLayout>

	</RelativeLayout>
</RelativeLayout>